--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section class="project">
       <h2>📁 Bash Scripts Library</h2>
       <p>Collection of reusable Bash scripts for sysadmin tasks, monitoring, backups, and more.</p>
-      <p><a href="https://github.com/YOUR_GITHUB/bash-scripts" target="_blank">View on GitHub →</a></p>
+      <p><a href="https://github.com/ilariv/bash" target="_blank">View on GitHub →</a></p>
     </section>
   </div>
 
