--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ilari • DevOps Engineer</title>
+  <title>Ilari • DevOps-Focused Systems Engineer</title>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
@@ -60,6 +60,26 @@
       color: var(--link-color);
     }
 
+    .about {
+      margin: 3rem auto 2rem;
+      max-width: 900px;
+      padding: 0 1rem;
+      text-align: center;
+    }
+
+    .about h2 {
+      color: var(--accent);
+      margin-bottom: 1rem;
+    }
+
+    .about p {
+      color: var(--text-color);
+      font-size: 1.05rem;
+      line-height: 1.8;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
     .container {
       max-width: 900px;
       margin: 2rem auto;
@@ -106,9 +126,11 @@
       header h1 {
         font-size: 1.5rem;
       }
+
       .project {
         padding: 1rem;
       }
+
       .social-icons a {
         font-size: 1.3rem;
         margin: 0 0.4rem;
@@ -123,16 +145,18 @@
       <a href="https://github.com/ilariv" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
       <a href="https://linkedin.com/in/ilarivuorensyrja" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
     </div>
-    <h1>Ilari • DevOps Engineer</h1>
-    <p>Linux | Kubernetes | Containerization | Automation | CI/CD </p>
+    <h1>Ilari • DevOps-Focused Systems Engineer</h1>
+    <p>Linux | Kubernetes | Containerization | Automation | CI/CD</p>
   </header>
 
-  <div class="container">
-    <section class="project">
-      <h2>About Me</h2>
-      <p>I'm a Systems Engineer with 5+ years of experience in systems administration, managing and automating cloud infrastructure, managing containerized apps, and optimizing cloud workflows. Currently learning Kubernetes and improving CI/CD practices and looking to transition to DevOps roles.</p>
-    </section>
+  <section class="about">
+    <h2>About Me</h2>
+    <p>
+      I'm a Systems Engineer with a strong background in Linux and cloud infrastructure. Over the past 5+ years, I’ve automated systems, built containerized environments, and recently started diving deep into DevOps practices like CI/CD, Kubernetes, and IaC. I’m passionate about building reliable, automated systems and growing into a DevOps-focused role.
+    </p>
+  </section>
 
+  <div class="container">
     <section class="project">
       <h2>Ansible Patch Management</h2>
       <p>Automated patching of Linux servers using Ansible, including Slack alerts and safe reboots.</p>
