--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Ilari • DevOps-Focused Systems Engineer</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     body {
       font-family: 'JetBrains Mono', monospace;
@@ -18,9 +19,9 @@
   <header class="border-b border-gray-800 p-6 shadow-md">
     <div class="max-w-6xl mx-auto flex flex-col sm:flex-row justify-between items-center">
       <div class="flex flex-col sm:flex-row items-center sm:items-start sm:space-x-6 text-center sm:text-left">
-        <img src="headshot.jpg" alt="Ilari's headshot" class="w-24 h-24 rounded-full border-2 border-yellow-400 mb-4 sm:mb-0" />
+        <img src="/Users/ilari/Desktop/Kuvat/ilariv.png" alt="Ilari's headshot" class="w-24 h-24 rounded-full border-2 border-yellow-400 mb-4 sm:mb-0" />
         <div>
-          <h1 class="text-3xl font-bold text-yellow-400">Ilari Vuorensyrjä</h1>
+          <h1 class="text-3xl font-bold text-yellow-400">Ilari Vuorensyrja</h1>
           <p class="text-lg text-gray-300">DevOps-Focused Systems Engineer</p>
           <p class="text-sm text-gray-400 mt-1">Based in Dallas, TX • Open to new opportunities (hybrid/remote)</p>
           <p class="text-teal-300 mt-2">Linux | Kubernetes | Containerization | Automation | CI/CD</p>
@@ -61,16 +62,16 @@
 
     <section class="mb-16">
       <h2 class="text-2xl text-yellow-400 font-semibold mb-4">Tech Stack</h2>
-      <div class="flex flex-wrap gap-4 text-2xl text-gray-400">
-        <div class="flex items-center space-x-2"><i class="fab fa-linux"></i><span class="text-sm">Linux</span></div>
-        <div class="flex items-center space-x-2"><i class="fab fa-docker"></i><span class="text-sm">Docker</span></div>
-        <div class="flex items-center space-x-2"><i class="fab fa-kubernetes"></i><span class="text-sm">Kubernetes</span></div>
-        <div class="flex items-center space-x-2"><img src="https://www.terraform.io/images/favicon-16x16.png" class="w-4 h-4" alt="Terraform"/><span class="text-sm">Terraform</span></div>
-        <div class="flex items-center space-x-2"><i class="fas fa-code"></i><span class="text-sm">Bash</span></div>
-        <div class="flex items-center space-x-2"><i class="fab fa-python"></i><span class="text-sm">Python</span></div>
-        <div class="flex items-center space-x-2"><i class="fab fa-azure"></i><span class="text-sm">Azure</span></div>
-        <div class="flex items-center space-x-2"><i class="fas fa-cogs"></i><span class="text-sm">CI/CD</span></div>
-        <div class="flex items-center space-x-2"><i class="fas fa-network-wired"></i><span class="text-sm">Networking</span></div>
+      <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 text-sm text-gray-300">
+        <div class="flex items-center space-x-2"><i class="fab fa-linux text-xl"></i><span>Linux</span></div>
+        <div class="flex items-center space-x-2"><i class="fab fa-docker text-xl"></i><span>Docker</span></div>
+        <div class="flex items-center space-x-2"><i class="fab fa-kubernetes text-xl"></i><span>Kubernetes</span></div>
+        <div class="flex items-center space-x-2"><img src="https://www.svgrepo.com/show/354202/terraform-icon.svg" alt="Terraform" class="w-5 h-5" /><span>Terraform</span></div>
+        <div class="flex items-center space-x-2"><i class="fas fa-terminal text-xl"></i><span>Bash</span></div>
+        <div class="flex items-center space-x-2"><i class="fab fa-python text-xl"></i><span>Python</span></div>
+        <div class="flex items-center space-x-2"><i class="fab fa-microsoft text-xl"></i><span>Azure</span></div>
+        <div class="flex items-center space-x-2"><i class="fas fa-cogs text-xl"></i><span>CI/CD</span></div>
+        <div class="flex items-center space-x-2"><i class="fas fa-network-wired text-xl"></i><span>Networking</span></div>
       </div>
     </section>
 
@@ -104,9 +105,6 @@
   <footer class="text-center text-sm text-gray-500 py-8 border-t border-gray-800">
     <p>Built by Ilari • <a href="mailto:ilari.vuorensyrja@outlook.com" class="hover:underline text-teal-400">Contact</a></p>
   </footer>
-
-  <!-- Font Awesome for icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
