--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="border-b border-gray-800 p-6 shadow-md">
     <div class="max-w-6xl mx-auto flex flex-col sm:flex-row justify-between items-center">
       <div class="flex flex-col sm:flex-row items-center sm:items-start sm:space-x-6 text-center sm:text-left">
-        <img src="/Users/ilari/Desktop/Kuvat/ilariv.png" alt="Ilari's headshot" class="w-24 h-24 rounded-full border-2 border-yellow-400 mb-4 sm:mb-0" />
+        <img src="images/ilariv.png" alt="Ilari's headshot" class="w-24 h-24 rounded-full border-2 border-yellow-400 mb-4 sm:mb-0" />
         <div>
           <h1 class="text-3xl font-bold text-yellow-400">Ilari Vuorensyrja</h1>
           <p class="text-lg text-gray-300">DevOps-Focused Systems Engineer</p>
