--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         </div>
     
         <div class="flex items-center space-x-2">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Tux.png" alt="Linux" class="w-5 h-5" />
-          <span>Linux</span>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/gitlab/gitlab-original.svg" alt="CI/CD" class="w-5 h-5" />
+          <span>CI/CD</span>
         </div>
     
         <div class="flex items-center space-x-2">
