--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
         </div>
       </div>
   
-      <!-- Top Right Icons -->
-      <div class="absolute top-6 right-6 flex space-x-4 text-gray-300">
-        <a href="https://github.com/ilariv" target="_blank" aria-label="GitHub" class="hover:text-teal-400 transition duration-300">
-          <i class="fab fa-github fa-2x"></i>
+      <!-- Right Side: Buttons -->
+      <div class="absolute top-6 right-6 flex space-x-4">
+        <a href="https://github.com/ilariv" target="_blank" class="bg-gray-800 hover:bg-teal-600 text-white text-sm font-semibold px-4 py-2 rounded shadow transition duration-300 flex items-center space-x-2">
+          <i class="fab fa-github"></i>
+          <span>GitHub</span>
         </a>
-        <a href="https://linkedin.com/in/ilari-vuorensyrja" target="_blank" aria-label="LinkedIn" class="hover:text-blue-500 transition duration-300">
-          <i class="fab fa-linkedin fa-2x"></i>
+        <a href="https://linkedin.com/in/ilari-vuorensyrja" target="_blank" class="bg-blue-700 hover:bg-blue-600 text-white text-sm font-semibold px-4 py-2 rounded shadow transition duration-300 flex items-center space-x-2">
+          <i class="fab fa-linkedin"></i>
+          <span>LinkedIn</span>
         </a>
       </div>
     </div>
